# lift-track-qt

./: pyproject.toml
src/: database.py  gui.py  main.py  progress.py  workout.py
