[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "weightlift tracker"
dynamic = ["version"]

dependencies = ["PySide6 == 6.9.1","pandas == 2.3.1"]
requires-python = ">=3.8"

author =  "Calum" : "codepycaste@gmail.com"
description = "GUI personal lift tracker"   
readme = "README.md"

license = "GPL-3.0-or-later"
license-files = ["COPYING.txt"]
keywords = {"GUI", "weightlifting", "matplotlib", "QT"}

[project-urls]

repository = "https://github.com/--/--.git"


